--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
         "node": "0.10.X",
         "npm": "1.3.X"
     },
-    "dependencies": {},
+    "dependencies": {
+        "debug" : "0.8.0"
+    },
     "devDependencies": {
-        "express": "3.x",
-        "supertest": "*",
-        "should": "*",
-        "grunt-contrib-jshint": "~0.2.0",
-        "grunt-mocha-test": "~0.7.0"
+        "express": "4.0.0",
+        "body-parser" : "~1.0.2",
+        "supertest": "~0.11.0",
+        "should": "~3.3.0",
+        "grunt-contrib-jshint": "~0.10.0",
+        "grunt-mocha-test": "~0.10.2"
     }
 }
