--- a/package.json
+++ b/package.json
@@ -1,39 +1,47 @@
 {
-    "name": "git-hook",
-    "version": "0.1.0",
-    "author": {
-        "name": "Christoph Hartmann",
-        "email": "chris@lollyrock.com",
-        "url": "http://www.lollyrock.com"
-    },
-    "keywords": ["hook", "git", "github", "bitbucket", "gitlab"],
-    "licenses": [{
-        "type": "Apache 2"
-    }],
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:gittalk/git-hook.git"
-    },
-    "bugs": {
-        "url": "https://github.com/gittalk/git-hook/issues"
-    },
-    "scripts": {
-        "test": "grunt test --verbose"
-    },
-    "main": "",
-    "engines": {
-        "node": "0.10.X",
-        "npm": "1.3.X"
-    },
-    "dependencies": {
-        "debug" : "0.8.0"
-    },
-    "devDependencies": {
-        "express": "4.0.0",
-        "body-parser" : "~1.0.2",
-        "supertest": "~0.11.0",
-        "should": "~3.3.0",
-        "grunt-contrib-jshint": "~0.10.0",
-        "grunt-mocha-test": "~0.10.2"
+  "name": "git-hook",
+  "version": "0.1.1",
+  "author": {
+    "name": "Christoph Hartmann",
+    "email": "chris@lollyrock.com",
+    "url": "http://www.lollyrock.com"
+  },
+  "keywords": [
+    "hook",
+    "git",
+    "github",
+    "bitbucket",
+    "gitlab"
+  ],
+  "licenses": [
+    {
+      "type": "Apache 2"
     }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:gittalk/git-hook.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gittalk/git-hook/issues"
+  },
+  "scripts": {
+    "test": "grunt test --verbose"
+  },
+  "main": "",
+  "engines": {
+    "node": "0.10.X",
+    "npm": "1.3.X"
+  },
+  "dependencies": {
+    "debug": "0.8.0"
+  },
+  "devDependencies": {
+    "express": "4.0.0",
+    "body-parser": "~1.0.2",
+    "supertest": "~0.11.0",
+    "should": "~3.3.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-mocha-test": "~0.10.2"
+  }
 }
