--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "express": "4.0.0",
-    "body-parser": "~1.0.2",
+    "body-parser": "git+https://github.com/chris-rock/body-parser.git",
     "supertest": "~0.11.0",
     "should": "~3.3.0",
     "grunt-contrib-jshint": "~0.10.0",
