--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "npm": "1.3.X"
   },
   "dependencies": {
-    "debug": "0.8.0",
+    "debug": "~0.8.0",
     "bluebird": "1.2.2",
-    "superagent": "0.18.0",
-    "netmask": "1.0.4"
+    "superagent": "~0.17.0",
+    "netmask": "~1.0.4"
   },
   "devDependencies": {
     "express": "4.0.0",
